<resources>
    <string name="app_name">英才掌聘</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登      录</string>
    <string name="register">注      册</string>
    <string name="tell">400-6500-588</string>
    <string name="register_tip">注册拨打服务热线：</string>
    <string name="name_zz"><b><u>行业找工作</u></b></string>
    <string name="selectCall">请选择您要拨打的号码</string>
    <string name="submit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="login_inval"> <b>求职无法登录？</b> </string>
    <string name="login_invaltwo"><b>点此下载：</b></string>
    <string name="login_invalthree">企业帐号无法登录？</string>
    <string name="login_invalfore">此应用不针对个人用户。</string>
    <string name="login_invalone">个人求职请下载“行业找工作”APP</string>
    <string name="login_invalid1">您当前不在合同中，请联系：</string>
    <string name="login_invalid2">招聘顾问安学哲：010-82197025</string>
    <string name="login_invalid3">英才网联服务热线：400-6500-588</string>
    <string name="install_confirm">安装提示</string>
    <string name="no_exit_800hrapp">推荐职位需安装“行业找工作”才能查看，是否下载安装？</string>
    <string name="unuser_sdcard">存储卡不可用或不存在</string>
    <string name="alert_dialog_ok_btn">确认</string>
    <string name="alert_dialog_cancel_btn">取消</string>
    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="title">标题</string>
    <string name="resume">简历</string>
    <string name="home">Home</string>
    <string name="job">职位</string>
    <string name="home_welcome">中午好，梁先生   欢迎您使用建筑英才网移动客户端</string>
    <string name="new_resume">今日新增简历   10 份</string>
    <string name="unread_resume">未读简历   20 份</string>
    <string name="service_limit">当前服务限量</string>
    <string name="job_publish">职位发布：976/1000</string>
    <string name="high_job_publish">高端职位发布：5/200</string>
    <string name="resume_download">简历下载：227/500</string>
    <string name="high_resume_download">高端简历下载：30/100</string>
    <string name="sms_send">短信发送：6/50</string>
    <string name="recruiter">招聘顾问</string>
    <string name="recruiter_name">梁明</string>
    <string name="recruiter_tel">010-82197037</string>
    <string name="byresume">按简历</string>
    <string name="byjob">按职位</string>
    <string name="tishi">暂无记录</string>
    <string name="send_invite">通知</string>
    <string name="set_note">备注</string>
    <string name="forward">转发</string>
    <string name="delete">删除</string>
    <string name="resumeinfo_item_type">个人信息</string>
    <string name="resumeinfo_item_attr">姓名:</string>
    <string name="resumeinfo_item_value">叶龙</string>
    <string name="headinfo_note">备注信息</string>
    <string name="headinfo_apply_job">应聘:</string>
    <string name="headinfo_apply_job_time">应聘时间:</string>
    <string name="personinfo_title">个人信息</string>
    <string name="name">姓名:</string>
    <string name="sex">性别:</string>
    <string name="age">年龄:</string>
    <string name="degree">学历:</string>
    <string name="birthday">出生日期</string>
    <string name="workyear">工作经验:</string>
    <string name="country">国家地区:</string>
    <string name="phone_number">手机号码:</string>
    <string name="now_place">现居住地:</string>
    <string name="account_place">户口:</string>
    <string name="degree_of_education">教育程度:</string>
    <string name="working_starttime">参加工作年份:</string>
    <string name="mobile_phone">手机:</string>
    <string name="Email">电子邮件:</string>
    <string name="Current_Professional_Titles">现有职称:</string>
    <string name="type_of_pagers">证件类型:</string>
    <string name="nummber_of_pagers">证件号码:</string>
    <string name="marriage_info">婚姻状况:</string>
    <string name="polity">政治面貌:</string>
    <string name="height">身高:</string>
    <string name="blood_type">血型:</string>
    <string name="fixed_phone">固话:</string>
    <string name="message_type">即时通讯:</string>
    <string name="message_nummber">即时通讯号码:</string>
    <string name="message_address">地址:</string>
    <string name="message_homepage">个人主页:</string>
    <string name="jobintention_title">求职意向</string>
    <string name="jobintention_worktype">工作性质:</string>
    <string name="jobintention_expectposition">期望职位:</string>
    <string name="jobintention_industry">所属行业:</string>
    <string name="jobintention_field">所属领域:</string>
    <string name="jobintention_workplace">工作地区:</string>
    <string name="jobintention_expectsalary">期望薪资(元):</string>
    <string name="jobintention_nowposition">目前从事职位:</string>
    <string name="jobintention_state">求职状态: </string>
    <string name="workexperience_title">工作经验</string>
    <string name="workexperience_time">工作时间:</string>
    <string name="workexperience_company">公司名称:</string>
    <string name="workexperience_companytype">公司性质:</string>
    <string name="workexperience_companysize">公司规模:</string>
    <string name="workexperience_starttime">开始时间:</string>
    <string name="workexperience_endtime">结束时间:</string>
    <string name="workexperience_address">工作地点:</string>
    <string name="workexperience_position">所任职位:</string>
    <string name="workexperience_branch">所属部门:</string>
    <string name="workexperience_duty">职责描述:</string>
    <string name="workexperience_resonleave">离职原因:</string>
    <string name="workexperience_presalary">税前月薪(元):</string>
    <string name="workexperience_industry">行业:</string>
    <string name="workexperience_mainareas">主营领域:</string>
    <string name="workexperience_positionpart">职位分类:</string>
    <string name="workexperience_zhixi">职系:</string>
    <string name="workexperience_zhicheng">职称:</string>
    <string name="workexperience_abroad">海外工作:</string>
    <string name="workexperience_country">国家/地区:</string>
    <string name="edubackground_title">教育背景</string>
    <string name="edubackground_time">起止时间:</string>
    <string name="edubackground_start_time">开始时间:</string>
    <string name="edubackground_end_time">结束时间:</string>
    <string name="edubackground_schoolname">学校名称:</string>
    <string name="edubackground_degree">学历:</string>
    <string name="edubackground_major">专业:</string>
    <string name="edubackground_major_des">专业描述:</string>
    <string name="edubackground_abroad">海外经历:</string>
    <string name="edubackground_country_edu">国家/地区:</string>
    <string name="projectexperience_title">项目经验</string>
    <string name="projectexperience_time">项目时间:</string>
    <string name="projectexperience_starttime">开始时间:</string>
    <string name="projectexperience_endtime">结束时间:</string>
    <string name="projectexperience_name">项目名称:</string>
    <string name="projectexperience_desc">项目描述:</string>
    <string name="projectexperience_duty">项目责任:</string>
    <string name="projectexperience_positon">项目职务:</string>
    <string name="selfevaluation_title">自我评价</string>
    <string name="language_title">语言能力</string>
    <string name="language_type">语言:</string>
    <string name="language_readwrite">读写:</string>
    <string name="language_listenspeak">听说:</string>
    <string name="professionalskill_title">专业技能</string>
    <string name="professionalskill_name">技能名称:</string>
    <string name="professionalskill_usertime">使用时间(月):</string>
    <string name="professionalskill_level">水平:</string>
    <string name="trainingexperience_title">培训经历</string>
    <string name="trainingexperience_time">培训时间:</string>
    <string name="trainingexperience_startdate">开始时间:</string>
    <string name="trainingexperience_enddate">结束时间:</string>
    <string name="trainingexperience_organization">培训机构:</string>
    <string name="trainingexperience_courses">培训课程:</string>
    <string name="trainingexperience_address">培训地点:</string>
    <string name="trainingexperience_certificate">获得证书:</string>
    <string name="trainingexperience_desc">培训描述:</string>
    <string name="cerificate_accessory">附件/作品</string>
    <string name="cerificate_Other_accessories">其他附件:</string>
    <string name="cerificate_Other_describe">附件描述:</string>
    <string name="cerificate_title">证书</string>
    <string name="cerificate_time">获取时间:</string>
    <string name="cerificate_name">证书名称:</string>
    <string name="cerificate_describe">证书描述:</string>
    <string name="other_title">其他</string>
    <string name="ok">确定</string>
    <string name="forward_to">将简历转发给他人：</string>
    <string name="forward_hint">请输入邮箱，多个邮箱以逗号隔开</string>
    <string name="recently_email">最近使用过的邮箱:</string>
    <string name="delete_hint">是否确认删除简历至回收站？</string>
    <string name="send_msg_way">发送方式:</string>
    <string name="send_email">发送邮件</string>
    <string name="send_msg">发送短信</string>
    <string name="select_moban">选择模版:</string>
    <string name="reserve_time">预约时间:</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="email_theme">邮件主题:</string>
    <string name="email_content">邮件内容:</string>
    <string name="reply_email">回复邮箱:</string>
    <string name="acceptOffer">应聘</string>
    <string name="scan">浏览</string>
    <string name="refsh_all_job">刷新全部职位</string>
    <string name="job_name">建筑设计师</string>
    <string name="job_address">海淀区</string>
    <string name="job_publish_time">2015-06-04</string>
    <string name="refsh_one_job">刷新</string>
    <string name="setting_share">分享</string>
    <string name="setting_exit">退出</string>
    <string name="setting_login_out">注销登录</string>
    <string name="setting_contact_us">联系我们</string>
    <string name="setting_app_down">APP下载</string>
    <string name="setting_hot_ad">热点广告</string>
    <string name="setting_brand_add">品牌广告</string>
    <string name="nonet">网络连接失败，请检查网络.</string>
    <string name="nettimeout">亲,网络超时啦！</string>
    <string name="loading">请稍后...</string>
    <string name="is_loading">加载中...</string>
    <string name="ltdaddress">北京市海淀区中关村南大街12号信息楼6层</string>
    <string name="zipcode">100081</string>
    <string name="tel">010-82197168/7188、010-62123388转</string>
    <string name="fax">010-82197596</string>
    <string name="feedback">feedback@800hr.com</string>
    <string name="searchresult_loadmore">努力加载中,请稍后...</string>
    <string name="noResume">简历不存在</string>
    <string name="pop_reUp">重新发布职位将使用相应发布限量，是否确认发布？职位有效期结束时间为合同时期，如需调整，请修改职位。</string>
    <string name="pop_reTitle">提示</string>
    <string name="feedback_jobmanage">职位管理问题</string>
    <string name="feedback_resumesearch">简历搜索问题</string>
    <string name="feedback_resumemanage">简历管理问题</string>
    <string name="feedback_service">服务建议</string>
    <string name="feedback_action">功能建议</string>
    <string name="feedback_other">其他</string>
    <string name="feedback_text">意见/建议/咨询:</string>
    <string name="current_num">1/5</string>
    <string name="deleteJob">您确定要删除该职位吗？</string>
    <string name="feedback_contact">联系电话:</string>
    <string name="feedback_email">联系邮箱:</string>
    <string name="resumescanByResume">按简历查看</string>
    <string name="resumescanByJob">按职位查看</string>
    <string name="date1">选择的日期不能小于当前时间</string>
    <string name="md__drawerOpenIndicatorDesc">Close drawer</string>
    <string name="md__drawerClosedIndicatorDesc">Open drawer</string>
    <string name="unPublic">未发布职位</string>
    <string name="issueJob">发布中职位</string>
    <string name="auditJob">审核未通过职位</string>
    <string name="pauseJob">已暂停职位</string>
    <string name="offlineJob">已到期职位</string>
    <string name="refresh">刷新成功</string>
    <string name="refresh_one">刷新</string>
    <string name="error_101">服务器错误</string>
    <string name="error_102">服务器临时不可用</string>
    <string name="error_103">请求无效</string>
    <string name="error_104">调用次数超过了限制</string>
    <string name="error_105">请求来自未经授权的IP地址</string>
    <string name="error_106">客户端版本过期，请升级客户端</string>
    <string name="error_201">请求数据校验失败</string>
    <string name="error_202">必须是POST提交</string>
</resources>