<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_line"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setting_share"
        style="@style/popupwindow_textstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_share"
        android:visibility="gone" />

    <View
        android:id="@+id/setting_share_line"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/setting_exit"
        style="@style/popupwindow_textstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_exit" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/setting_login_out"
        style="@style/popupwindow_textstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_login_out" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/setting_contact_us"
        style="@style/popupwindow_textstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_contact_us" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/setting_app_down"
        style="@style/popupwindow_textstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_app_down" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/setting_hot_ad"
        style="@style/popupwindow_textstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_hot_ad" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/setting_brand_add"
        style="@style/popupwindow_textstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_brand_add" />

</LinearLayout>